[gd_scene load_steps=2 format=3 uid="uid://bpwge47rvwmyx"]

[ext_resource type="Script" path="res://scripts/gui/gui scripts/car_info_cell.gd" id="1_ji1ed"]

[node name="car info cell" type="ColorRect"]
custom_minimum_size = Vector2(0, 41.27)
color = Color(0.377919, 0.377919, 0.377919, 1)
script = ExtResource("1_ji1ed")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45

[node name="Label queue_number" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "#x"

[node name="Label2 car_name" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "car_name_here"
